# RpcFramework

./: CMakeLists.txt  README.md  autobuild.sh
example/: user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
include/: mprpccontroller.hpp  rpcchannel.hpp  zookeeperutil.hpp
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcconfig.cc  mprpccontroller.cc  rpcchannel.cc  rpcheader.pb.cc  rpcheader.pb.h  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.hpp  logger.hpp  mprpcapplication.hpp  mprpcconfig.hpp  rpcprovider.hpp
test/protobuf/: a.out  main.cpp  test.pb.cc  test.pb.h  test.proto
